--- a/Numpy_pynb.ipynb
+++ b/Numpy_pynb.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,13 +17,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4-iaVa90kaSS",
-        "outputId": "da66c45c-9139-489d-eb91-ee5a42e040fe"
+        "outputId": "ca6e4dff-aec2-4f0b-9600-d6da7f9e0514"
       },
       "outputs": [
         {
@@ -52,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oeDE_BzGlN41",
-        "outputId": "e2d87a74-2735-45ae-a725-f7331fddb7e8"
+        "outputId": "868ab8ef-86dc-4d1f-d2cf-c68e22f292da"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j7Z-WPfalugb",
-        "outputId": "4d7d5cff-2368-4f69-e926-8a6fa2f6485a"
+        "outputId": "249d491a-e0e6-49e8-81c3-5cab2b90d1d1"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vZ21mgeKnFnK",
-        "outputId": "3281ee5b-9b45-407c-9285-b0bdc77c9d1b"
+        "outputId": "e337eb82-d814-480e-b3ab-33d3bad75c56"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,9 +161,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fIFezQVLoIiw",
-        "outputId": "6ec20f35-901d-483c-c95b-bab12240d8bd"
+        "outputId": "a0a7c98d-1d37-4a28-979b-1d33fd3453cb"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,9 +195,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "94922fc3-1be6-4a8a-d033-b7ff3c94c4f2"
+        "outputId": "e46b10b2-fa30-40eb-f9ae-34c15619bab6"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rysKLLePHWx3",
-        "outputId": "b612e62a-6acb-4f63-99a9-be55b5a6e952"
+        "outputId": "180da13d-88f7-46f0-8feb-7eb01d077e45"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4sFCYpQHswJ",
-        "outputId": "5c3f1e1e-1cdf-40d8-ce3b-76b661a75258"
+        "outputId": "d749d809-2201-4217-8007-cd0f673be194"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7LVJ-gnkH54F",
-        "outputId": "36ae0cb8-bf52-44bd-885d-a3b7571864af"
+        "outputId": "2082d1cd-2279-496e-ab21-fe9f3b948df5"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,9 +376,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS9i-qABIfpA",
-        "outputId": "f3969553-7650-4fc4-cbf3-98a53783a0d6"
+        "outputId": "6aa67d31-1c70-4a60-a5c7-6d433d0be015"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,9 +412,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z8rJChkzJPx6",
-        "outputId": "2c007aeb-7379-4444-a95a-11263365ae2d"
+        "outputId": "00dfe83d-fc91-45be-fbbd-b09d0e30ae31"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -463,9 +464,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uo9BfCdIKFy7",
-        "outputId": "9b8594b7-2c58-40aa-e1dc-ddea67c25580"
+        "outputId": "c500c60e-568f-414d-a121-374b8f959a9b"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,9 +518,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4k2KW1MNL10l",
-        "outputId": "395ffc13-51ad-407e-cd7b-902acf7256c5"
+        "outputId": "8f1e95a9-32da-4831-c907-4cb7819f9ccc"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,9 +548,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P__UJHbWMf3C",
-        "outputId": "99cb4f71-0c65-4acb-a9c3-034dda758bf7"
+        "outputId": "1894872a-1ee6-4e28-ff3f-c437be8aea7c"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-8vg-rUYNRBU",
-        "outputId": "0fba9327-da26-4ed8-a059-0ad3814d12e9"
+        "outputId": "975d3386-8a37-49a2-bde4-754ffd8984ab"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,9 +620,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ru8WViNuN4fj",
-        "outputId": "d3e8bc0f-00a4-470c-eef8-c696818ed6f4"
+        "outputId": "981fac1a-8750-4844-8194-a8452bbd62b0"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,9 +672,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4-ZkH_YwOmjk",
-        "outputId": "2e4ba706-e0e7-4355-92ad-949068434613"
+        "outputId": "e5833cce-3a53-40b0-cba6-8b1e94860589"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,9 +722,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gy8Dn4lPv8l",
-        "outputId": "64bfb55a-1958-4469-fb4a-0f5bc0354638"
+        "outputId": "d2246840-457a-4f91-b4b3-7002c6023722"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,9 +772,338 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a = np.array([[1, 2, 3, 4, 5],\n",
+        "               [6, 7, 8, 9, 10],\n",
+        "               [11, 12, 13, 14, 15],\n",
+        "               [16, 17, 18, 19, 20]])\n",
+        "\n",
+        "print(a.transpose())\n",
+        "print(a.swapaxes(0, 1))"
+      ],
+      "metadata": {
+        "id": "raHpwHN9RzQF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "54a34926-58a7-44fc-d3e2-65916d64bcae"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  6 11 16]\n",
+            " [ 2  7 12 17]\n",
+            " [ 3  8 13 18]\n",
+            " [ 4  9 14 19]\n",
+            " [ 5 10 15 20]]\n",
+            "[[ 1  6 11 16]\n",
+            " [ 2  7 12 17]\n",
+            " [ 3  8 13 18]\n",
+            " [ 4  9 14 19]\n",
+            " [ 5 10 15 20]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Concatenating, Stacking, Splitting"
+      ],
+      "metadata": {
+        "id": "qNddi_6EBlY-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 = np.array([[1, 2, 3, 4, 5],\n",
+        "               [6, 7, 8, 9, 10]])\n",
+        "\n",
+        "a2 = np.array([[11, 12, 13, 14, 15],\n",
+        "               [16, 17, 18, 19, 20]])\n",
+        "\n",
+        "a = np.concatenate((a1, a2), axis = 0)\n",
+        "print(a)\n",
+        "\n",
+        "aa = np.concatenate((a1, a2), axis = 1)\n",
+        "print(aa)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-lRVB5ONA9ir",
+        "outputId": "f21b2af8-87e5-4336-9c62-50b4a808e53e"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]\n",
+            " [11 12 13 14 15]\n",
+            " [16 17 18 19 20]]\n",
+            "[[ 1  2  3  4  5 11 12 13 14 15]\n",
+            " [ 6  7  8  9 10 16 17 18 19 20]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 = np.array([[1, 2, 3, 4, 5],\n",
+        "               [6, 7, 8, 9, 10]])\n",
+        "\n",
+        "a2 = np.array([[11, 12, 13, 14, 15],\n",
+        "               [16, 17, 18, 19, 20]])\n",
+        "\n",
+        "a = np.stack((a1, a2))\n",
+        "print(a)\n",
+        "\n",
+        "aa = np.vstack((a1, a2))\n",
+        "print(aa)\n",
+        "\n",
+        "aaa = np.hstack((a1, a2))\n",
+        "print(aaa)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-o-euz5gDcln",
+        "outputId": "32c4327e-c0ec-4192-9e33-bb0ab4ed6381"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 1  2  3  4  5]\n",
+            "  [ 6  7  8  9 10]]\n",
+            "\n",
+            " [[11 12 13 14 15]\n",
+            "  [16 17 18 19 20]]]\n",
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]\n",
+            " [11 12 13 14 15]\n",
+            " [16 17 18 19 20]]\n",
+            "[[ 1  2  3  4  5 11 12 13 14 15]\n",
+            " [ 6  7  8  9 10 16 17 18 19 20]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.array([[1, 2, 3, 4, 5],\n",
+        "               [6, 7, 8, 9, 10],\n",
+        "               [11, 12, 13, 14, 15],\n",
+        "               [16, 17, 18, 19, 20]])\n",
+        "\n",
+        "print(np.split(a, 2, axis = 0))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5_HWLOaPDmtD",
+        "outputId": "63ebb44b-5f42-456d-fae7-3def39b55858"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[array([[ 1,  2,  3,  4,  5],\n",
+            "       [ 6,  7,  8,  9, 10]]), array([[11, 12, 13, 14, 15],\n",
+            "       [16, 17, 18, 19, 20]])]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Aggregate Function"
+      ],
+      "metadata": {
+        "id": "ws-GM6k0GML8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.array([[1, 2, 3, 4, 5],\n",
+        "               [6, 7, 8, 9, 10],\n",
+        "               [11, 12, 13, 14, 15],\n",
+        "               [16, 17, 18, 19, 20]])\n",
+        "print(a.min())\n",
+        "print(a.max())\n",
+        "print(a.mean())\n",
+        "print(a.std())\n",
+        "print(a.sum())\n",
+        "print(np.median(a))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4gPzdv3XEghX",
+        "outputId": "54c8f44c-200a-4c59-9484-49a80e908d2b"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "20\n",
+            "10.5\n",
+            "5.766281297335398\n",
+            "210\n",
+            "10.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random"
+      ],
+      "metadata": {
+        "id": "SW7spB1qGuGk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = np.random.randint(100)\n",
+        "print(number)\n",
+        "\n",
+        "numbers = np.random.randint(90, 100, size = (2, 3, 4))\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kfisVsVrGazY",
+        "outputId": "9e7b6aee-4bfa-4b63-bc67-9eecd32a5b1a"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42\n",
+            "[[[97 98 95 99]\n",
+            "  [94 98 92 93]\n",
+            "  [95 97 97 92]]\n",
+            "\n",
+            " [[93 92 95 96]\n",
+            "  [99 90 91 99]\n",
+            "  [91 96 93 98]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number_one = np.random.binomial(10, p = 0.5, size = (5, 10))\n",
+        "print(number_one)\n",
+        "\n",
+        "number_two = np.random.choice([10, 20, 30, 40, 50], size = (5, 10))\n",
+        "print(number_two)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W0lCdc2lHMZv",
+        "outputId": "b25da70e-c62f-43ff-90d0-a0a2ad3f0faf"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6 4 5 4 4 3 6 7 6 5]\n",
+            " [6 5 6 4 3 4 3 6 3 5]\n",
+            " [2 4 6 6 5 4 7 5 7 5]\n",
+            " [6 5 3 4 4 4 6 3 5 5]\n",
+            " [7 6 5 4 6 2 5 3 5 7]]\n",
+            "[[40 30 50 40 10 20 40 10 50 40]\n",
+            " [40 20 30 30 40 20 40 40 50 30]\n",
+            " [30 40 10 10 10 40 10 40 50 30]\n",
+            " [10 50 20 20 20 40 30 40 10 50]\n",
+            " [10 50 20 20 20 30 10 30 50 10]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Exporting and Importing numpy"
+      ],
+      "metadata": {
+        "id": "ylIzxjmbIlV3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#a = np.array([[1, 2, 3, 4, 5],\n",
+        "#              [6, 7, 8, 9, 10],\n",
+        "#              [11, 12, 13, 14, 15],\n",
+        "#              [16, 17, 18, 19, 20]])\n",
+        "\n",
+        "# np.savetxt(\"myarray.csv\", a, delimiter = \",\") #There will be a csv file in your drive.\n",
+        "\n",
+        "a = np.loadtxt(\"myarray.csv\", delimiter = \",\")\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zTuy8WCaH-xp",
+        "outputId": "3cad40a5-aa7f-4067-8b74-e8fcffec39a1"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1.  2.  3.  4.  5.]\n",
+            " [ 6.  7.  8.  9. 10.]\n",
+            " [11. 12. 13. 14. 15.]\n",
+            " [16. 17. 18. 19. 20.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "raHpwHN9RzQF"
+        "id": "1sD8KPkNPNEL"
       },
       "execution_count": null,
       "outputs": []
